# wildflover

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
docs/: marketplace-index-example.json
managers/: README.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: README.md
src-tauri/src/: discord.rs  discord_rpc.rs  main.rs  marketplace.rs  marketplace_catalog.rs  marketplace_delete.rs  marketplace_download_count.rs  marketplace_like.rs  marketplace_update.rs  marketplace_upload.rs  mod_manager.rs  webhook.rs
src/components/: ActivationProgressModal.css  ActivationProgressModal.tsx  ChampionCard.css  ChampionCard.tsx  CustomCard.css  CustomCard.tsx  SelectedSkinsModal.css  SelectedSkinsModal.tsx  SelectionFab.css  SelectionFab.tsx  SettingsModal.css  SettingsModal.tsx  SkinSelector.css  SkinSelector.tsx  TitleBar.css  TitleBar.tsx  Toast.css  Toast.tsx  TopBar.css  TopBar.tsx  TutorialModal.css  TutorialModal.tsx
src/config/: app.config.ts  marketplace.config.ts
src/i18n/: index.ts
tools/: README.md  convert_to_ico.py  create_all_pngs.py  create_hq_ico.py  create_ico.py  create_login_icon_ico.py  create_round_icon.py  discord_webhook.py  generate_download_banner.py  generate_login_guide.py  generate_new_icon.py  generate_welcome_banner.py  icon_generator.py  image_info.py  requirements.txt  splash_processor.py  webhook_config.json
(+106 files in other folders)
